--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#FFE7506F</color>
+    <color name="status_bar">#FFE7506F</color>
+    <color name="sender_bubble_color">#FFE7506F</color>
+    <color name="on_sender_bubble_color">#FFFFFFFF</color>
+    <color name="receiver_bubble_color">#FFFBF5F3</color>
+    <color name="on_receiver_bubble_color">#292828</color>
+    <color name="message_delivered">#FFF7CB50</color>
 </resources>
