--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="Theme.ComposeChat" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/pink</item>
+        <item name="android:statusBarColor">@color/status_bar</item>
     </style>
 </resources>
