--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="status_bar">#FFE7506F</color>
     <color name="sender_bubble_color">#FFE7506F</color>
     <color name="on_sender_bubble_color">#FFFFFFFF</color>
-    <color name="receiver_bubble_color">#FFFBF5F3</color>
-    <color name="on_receiver_bubble_color">#292828</color>
+    <color name="receiver_bubble_color">#FFEEEEEE</color>
+    <color name="on_receiver_bubble_color">#FF64727F</color>
+    <color name="timestamp_text_color">#FFB6BCC2</color>
     <color name="message_delivered">#FFF7CB50</color>
 </resources>
